// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider renders a div 1`] = `
<div
  style={Object {}}
>
  Hello
</div>
`;

exports[`ThemeProvider renders a div with styling 1`] = `
<div
  style={
    Object {
      "--body-background": "white",
      "--body-contentColor": "black",
    }
  }
>
  Hello
</div>
`;

exports[`ThemeProvider renders nested themes 1`] = `
<div
  style={
    Object {
      "--body-background": "white",
      "--body-contentColor": "black",
    }
  }
>
  <div>
    Light theme
  </div>
  <div
    style={
      Object {
        "--body-background": "black",
        "--body-contentColor": "white",
      }
    }
  >
    <div>
      Dark theme
    </div>
  </div>
</div>
`;
